css/appWindow.css
i {
    /* background-color: #7F7FFF; */
    background-color: #7FFFbF;
}

h1 {
    border-bottom: 4px solid #FFBF7F;
    display: inline;
}

.wrapper {
    position: absolute;
    z-index: 2;
    background-color: grey;
    border: 2px solid;
    resize: both;
    overflow: auto;
    border-radius: 4px;
}

.window-focus {
    z-index: 3;
}

.window-top {
    color: black;
    width: inherit;
    height: 26px;
    align-items: center;
    position: sticky;
    background: #7FBFFF;
    cursor: default;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    column-gap: 16px;
}

.title-area {
    margin-left: 1ch;
}

.quit-button {
    color: inherit;
    width: 4ch;
    height: calc(100% - 4px);
    margin: 4px;
    background-color: #FF7F7F;
    border-width: 0;
    border-radius: 2px;
    text-align: center;
    transition: background-color 100ms ease-in-out;
}

.quit-button:hover {
    background-color: #FF5050;
}

.window-body {
    color: black;
    overflow-y: auto;
    background: lightgrey;
    width: 100%;
    height: calc(100% - 26px);
    text-align: center;
}

.overflow-ellipses {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.repos {
    display: block;
    padding: 2ch;
    border: 4px solid #7F7FFF;
    border-radius: 4px;
}

.displaying-repos {
    border-bottom: #FFBF7F;
    border-bottom: 4px solid #FFBF7F;
}

.repo {
    display: block;
    margin-bottom: 4px;
}

.repo-hyperlink {
    text-decoration: none;
    color: inherit;
    background-color: #ff7f7f77;
    border-bottom: 2px solid #FF7F7F;
    margin-bottom: 2px;
}

.repo-hyperlink::before {
    content: "-> ";
}

